--- a/haiku/package.json
+++ b/haiku/package.json
@@ -7,7 +7,7 @@
     "build": "webpack --mode development",
     "start": "npm run build; webpack-dev-server --open --mode development",
     "lint": "eslint src/*.js",
-    "test": "jasmine"
+    "test": "karma start karma.conf.js"
   },
   "keywords": [],
   "author": "",
@@ -26,8 +26,9 @@
     "karma-jasmine": "^1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-jquery": "^0.2.2",
-    "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.13",
+    "node-sass": "^4.9.3",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.20.2",
     "uglifyjs-webpack-plugin": "^1.2.2",
     "webpack": "^4.0.1",
