--- a/haiku/.eslintrc
+++ b/haiku/.eslintrc
@@ -1,19 +1,16 @@
-
+{
     "parserOptions": {
         "ecmaVersion": 6,
         "sourceType": "module"
     },
     "extends": "eslint:recommended",
     "env": {
+      "es6": true,
       "browser": true,
-      "jquery": true,
-      "node": true,
-      "jasmine": true
-  },
+      "jquery": true
+    },
     "rules": {
-      "semi": 1,
-      "indent": ["warn", 2],
-      "no-console": "warn",
-      "no-debugger": "warn"
-  }
+        "semi": 1,
+        "indent": ["warn", 2]
+    }
 }
